<resources>
    <string name="app_name">ParseSendClient SendDemo</string>

    <string name="push_title_hint">Push title</string>
    <string name="push_message_hint">Push message</string>
    <string name="push_url_hint">Push url</string>
    <string name="send_push_now">Send Push Now</string>
    <string name="send_scheduling_push">Send Scheduling Push</string>
    <string name="force_sound">force sound</string>
</resources>
